# hsc3-mixer

./: Reactive.hs  example.hs  hsc3-mixer.cabal  mixer-elerea.hs  mixer-elerea2.hs  mixer-sf.hs  mixer.hs
Data/Signal/: SF.hs
Data/Signal/SF/: Base.hs  Event.hs
Reactive/: Classes.hs  Core.hs
Sound/SC3/: Mixer.hs
Sound/SC3/Mixer/: SynthDefs.hs
Sound/SC3/Server/: Reactive.hs  Resource.hs  Send.hs
Sound/SC3/Server/Monad/: Command.hs  Send.hs
Sound/SC3/Server/Resource/: SynthDef.hs
