Name:               hsc3-mixer
Version:            0.3.0
Synopsis:           SuperCollider server resource management and synchronization.
Description:        This library provides abstractions for managing SuperCollider server resources like node, buffer and bus ids and synchronization primitives.
License:            GPL
License-File:       LICENSE
Category:           Sound
Copyright:          Copyright (c) Stefan Kersten 2008-2011
Author:             Stefan Kersten
Maintainer:         Stefan Kersten
Stability:          experimental
Homepage:           http://space.k-hornz.de/software/hsc3-mixer
Tested-With:        GHC == 6.10.1, GHC == 6.12.3, GHC == 7.0.1
Build-Type:         Simple
Cabal-Version:      >= 1.9.2

Library
    Exposed-Modules:
        Sound.SC3.Mixer
        Sound.SC3.Mixer.SynthDefs
        Sound.SC3.Server.Monad.Command
        Sound.SC3.Server.Monad.Send
    Build-Depends:
        base >= 4 && < 5
      , bytestring
      , bzlib
      , containers
      , failure
      , hosc >= 0.10
      , hsc3 >= 0.10
      , hsc3-process >= 0.6
      , hsc3-server >= 0.3
      , random
      , SHA2
      , transformers
    Ghc-Options:
        -W
    Ghc-Prof-Options:
        -W -auto-all

--Executable hsc3-mixer
    --Main-Is: mixer.hs
    --Ghc-Options:      -W -threaded -rtsopts
    --Ghc-Prof-Options: -W -threaded -rtsopts -auto-all
    --Build-Depends:
        --base >= 4 && < 5
      --, bytestring
      --, bzlib
      --, containers
      --, failure
      --, hosc >= 0.10
      --, hsc3 >= 0.10
      --, hsc3-process >= 0.6
      --, hsc3-server >= 0.3
      --, random
      --, reactive-banana >= 0.5.0
      --, SHA2
      --, transformers

Executable hsc3-example
    Main-Is: example.hs
    Ghc-Options:      -W -threaded -rtsopts
    Ghc-Prof-Options: -W -threaded -rtsopts -auto-all
    Build-Depends:
        base >= 4 && < 5
      , bytestring
      , bzlib
      , containers
      , failure
      , hosc >= 0.10
      , hsc3 >= 0.10
      , hsc3-process >= 0.6
      , hsc3-server >= 0.3
      , random
      , SHA2
      , transformers

Source-Repository head
    Type:       git
    Location:   git://github.com/kaoskorobase/hsc3-mixer.git
